crates/reinhardt-pages/tests/ui/client_form/fail/server_fn_submit_request_serialize.stderr
error[E0277]: the trait bound `SettingsRequest: serde::Serialize` is not satisfied
 --> tests/ui/client_form/fail/server_fn_submit_request_serialize.rs:6:41
  |
6 | #[derive(Clone, PartialEq, Deserialize, ClientForm)]
  |                                         ^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Serialize` is not implemented for `SettingsRequest`
 --> tests/ui/client_form/fail/server_fn_submit_request_serialize.rs:8:1
  |
8 | pub struct SettingsRequest {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `SettingsRequest` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
  = note: this error originates in the derive macro `ClientForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SettingsRequest: serde::Serialize` is not satisfied
  --> tests/ui/client_form/fail/server_fn_submit_request_serialize.rs:17:1
   |
17 | #[server_fn]
   | ^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Serialize` is not implemented for `SettingsRequest`
  --> tests/ui/client_form/fail/server_fn_submit_request_serialize.rs:8:1
   |
 8 | pub struct SettingsRequest {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `SettingsRequest` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `_::_serde::ser::SerializeStruct::serialize_field`
  --> $CARGO/serde_core-$VERSION/src/ser/mod.rs
   |
   |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
   |        --------------- required by a bound in this associated function
   |     where
   |         T: ?Sized + Serialize;
   |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
   = note: this error originates in the attribute macro `server_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
